# Graph-RAG

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_api.py
agentic_graph_rag/: medical_aliases.py  service.py  text_signals.py  tool_policy.py  trace_explain.py  trace_store.py
api/: app.py  mcp_server.py  routes.py
benchmark/: __init__.py  adapters.py  generation_eval.py  retrieval_eval.py  runner.py
docs/: 01-骨架图谱抽取.md  02-双节点图谱建模.md  03-三路融合检索.md  04-检索自纠循环.md  PORTFOLIO_ANALYSIS.md  resume.md  resume_metrics_fill.md
scripts/: check_neo4j_experiment_isolation.py  check_phrase_aliases.py  check_trace_eval.py  compare_graph_chunking.py  compile_assertion_gold_set.py  debug_global_q27.py  eval_assertion_classifier.py  evaluate_resume_metrics.py  evaluate_resume_metrics_live.py  export_assertion_gold_review.py  export_trace_eval.py  import_assertion_silver_to_neo4j.py  ingest.py  prelabel_assertion_silver_set.py  prepare_assertion_dataset.py  prepare_cblue_assertion_dataset.py  prepare_dialogue_assertion_dataset.py  prepare_graphrag_benchmark_corpus.py  prepare_graphrag_benchmark_questions.py  prepare_medical_benchmark_assets.py  run_benchmark_v10.py  run_benchmark_v10_doc2.py  run_benchmark_v10_full.py  run_benchmark_v11_global.py  run_benchmark_v12.py  run_benchmark_v9.py  run_graphrag_benchmark_medical.py  run_medical_format_smoke.py  run_q27_test.py  train_assertion_classifier.py
tests/: test_benchmark.py  test_budget.py  test_compare_graph_chunking.py  test_correction_planner.py  test_dual_node.py  (+20 more)
(+93 files in other folders)
